@startuml

title __DATA's Class Diagram__\n

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Coordinates {
            - X : int
            - Y : int
            + Coordinates()
            + Coordinates()
            + equals()
            + getX()
            + getY()
            + hashCode()
            + setX()
            + setY()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Player {
            - id : int
            - ships : List<Ship>
            + Player()
            + Player()
            + equals()
            + getId()
            + getShips()
            + hashCode()
            + setId()
            + setShips()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.Ship {
            - ship_parts : List<ShipPart>
            + Ship()
            + Ship()
            + addPart()
            + equals()
            + getShip_parts()
            + hashCode()
            + setShip_parts()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPart {
            + ShipPart()
            + ShipPart()
            + equals()
            + getCoordinates()
            + getState()
            + hashCode()
            + setCoordinates()
            + setState()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        interface com.example.schiffeversenken.data.ShipPartState {
            {abstract} + hit()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPartStateHit {
            + hit()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.schiffeversenken {
      namespace data {
        class com.example.schiffeversenken.data.ShipPartStateNotHit {
            + hit()
        }
      }
    }
  }
  

  com.example.schiffeversenken.data.ShipPart o-- com.example.schiffeversenken.data.Coordinates : coordinates
  com.example.schiffeversenken.data.ShipPart o-- com.example.schiffeversenken.data.ShipPartState : state
  com.example.schiffeversenken.data.ShipPartStateHit .up.|> com.example.schiffeversenken.data.ShipPartState
  com.example.schiffeversenken.data.ShipPartStateNotHit .up.|> com.example.schiffeversenken.data.ShipPartState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
